--- a/index.html
+++ b/index.html
@@ -15,14 +15,24 @@
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
 
-    <script src="app.js" defer></script>
+    <script src="index.js" defer></script>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
+    
 
 
 </head>
 <body>
+    <form>
+        <select id="business">
+            <option value="restaurant">Restaurant</option>
+            <option value="coffee">Coffee Shops</option>
+            <options value="hotel">Hotel</options>
+            <option value="market">Markets</option>
+        </select>
+        <button id="submit">Submit</button>
+    </form>
     <div id="map"></div>
     
 </body>
